Added some template stuff to the frontend example

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,34 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="globals.css" media="screen" />
         <title>Document</title>
     </head>
     <body>
-        <h1>Heading</h1>
+        <nav>
+            <div class="container">
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
+            </div>
+        </nav>
+        <main>
+            <h1>Heading</h1>
+            <p>
+                Tired of using modern languages and frameworks for your web
+                development projects?
+            </p>
+            <p>
+                Yearning for a fresh perspective that taps into the roots of
+                programming history?
+            </p>
+            <p>
+                Introducing [name] where old-school meets cutting-edge to
+                revolutionize your web development experience. This isn't just a
+                trip down memory lane, it's an opportunity to combine the wisdom
+                of the past with the possibilities of the present to craft the
+                development experience of the future.
+            </p>
+        </main>
     </body>
 </html>
