Placeholder text and layout complete for frontend example

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,28 +9,50 @@
     <body>
         <nav>
             <div class="container">
-                <a href="#">Home</a>
-                <a href="#">About Us</a>
-                <a href="#">Contact Us</a>
+                <a href="#">About</a>
+                <a href="#solution">Solution</a>
+                <a href="#features">Features</a>
+                <a href="#future">Future</a>
             </div>
         </nav>
         <main>
-            <h1>Heading</h1>
-            <p>
-                Tired of using modern languages and frameworks for your web
-                development projects?
-            </p>
-            <p>
-                Yearning for a fresh perspective that taps into the roots of
-                programming history?
-            </p>
-            <p>
-                Introducing [name] where old-school meets cutting-edge to
-                revolutionize your web development experience. This isn't just a
-                trip down memory lane, it's an opportunity to combine the wisdom
-                of the past with the possibilities of the present to craft the
-                development experience of the future.
-            </p>
+            <section id="about">
+                <h1>About</h1>
+                <p>
+                    Tired of using modern languages and frameworks for your web
+                    development projects?
+                </p>
+                <p>
+                    Yearning for a fresh perspective that taps into the roots of
+                    programming history?
+                </p>
+                <p>
+                    Introducing [name] where old-school meets cutting-edge to
+                    revolutionize your web development experience. This isn't
+                    just a trip down memory lane, it's an opportunity to combine
+                    the wisdom of the past with the possibilities of the present
+                    to craft the development experience of the future.
+                </p>
+            </section>
+            <section id="solution">
+                <h1>Solution</h1>
+                <p>This programming language is inspired by BASIC.</p>
+                <p>We used [...] to build it.</p>
+                <p>
+                    It is a very low level language that is compiled to HTML
+                    code which is then used to render a web page.
+                </p>
+            </section>
+            <section id="features">
+                <h1>Features</h1>
+                <p>Displaying different heading and paragraph tags.</p>
+                <p>Having variables that can be used/updated by the user.</p>
+            </section>
+            <section id="future">
+                <h1>Future</h1>
+                <p>Images</p>
+                <p>Routing</p>
+            </section>
         </main>
     </body>
 </html>
