Added some basic styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,11 @@
         <title>Document</title>
     </head>
     <body>
+        <div class="topper">
+            <div class="one">NAME</div>
+            <div class="two">WEB</div>
+            <div class="three"></div>
+        </div>
         <nav>
             <div class="container">
                 <a href="#">About</a>
