--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,63 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="globals.css" media="screen" />
-        <title>Document</title>
-    </head>
-    <body>
-        <div class="topper">
-            <div class="one">NAME</div>
-            <div class="two">WEB</div>
-            <div class="three"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="globals.css" media="screen" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="topper">
+      <div class="one">NAME</div>
+      <div class="two">WEB</div>
+      <div class="three"></div>
+    </div>
+    <nav>
+      <div class="container">
+        <a href="#">About</a>
+        <a href="#solution">Solution</a>
+        <a href="#features">Features</a>
+        <a href="#future">Future</a>
+      </div>
+    </nav>
+    <main>
+      <section id="about">
+        <h1>About</h1>
+        <p>
+          Tired of using modern languages and frameworks for your web
+          development projects?
+        </p>
+        <p>
+          Yearning for a fresh perspective that taps into the roots of
+          programming history?
+        </p>
+        <p>
+          Introducing [name] where old-school meets cutting-edge to
+          revolutionize your web development experience. This isn't just a trip
+          down memory lane, it's an opportunity to combine the wisdom of the
+          past with the possibilities of the present to craft the development
+          experience of the future.
+        </p>
+        <p>By the way, ___say that this page is written in BASIC Web___</p>
+      </section>
+      <section id="solution">
+        <h1>Solution</h1>
+        <p>
+          BASIC Web is a programming language inspired by variants of BASIC. It
+          allows you to construct DOM nodes, handle events, and bind data,
+          similar to modern frameworks like React. The set of features in the
+          language is limited; however, with unconditional jumps
+          (<code>GOTO</code>), conditional jumps (<code>GOTOIF</code>), and
+          variables of type string, number, boolean, and array, you can create
+          anything you desire.
+        </p>
+        <p>
+          The programming model is imperative. The code is run once to initially
+          render the page. Upon each event, the program jumps to a certain
+          instruction and begins executing again, and may rerender the entire
+          page.
+        </p>
+        <p>
+          The compiler and runtime library are written in TypeScript. When you
+          compile your code, you get an HTML file. Your program is encoded to an
+          intermediate representation in JSON which the runtime library uses to
+          run your program in the browser.
+        </p>
+      </section>
+      <section id="features">
+        <h1>Features</h1>
+        <p>Displaying different heading and paragraph tags.</p>
+        <p>Having variables that can be used/updated by the user.</p>
+      </section>
+      <section>
+        <h1>Demos</h1>
+        <h2>Hello world!</h2>
+
+        <div style="border: solid 1px red; padding: 1rem">
+          <pre style="margin: 0"><code>OPEN h1
+PRINT "Hello World!"
+CLOSE
+END</code></pre>
         </div>
-        <nav>
-            <div class="container">
-                <a href="#">About</a>
-                <a href="#solution">Solution</a>
-                <a href="#features">Features</a>
-                <a href="#future">Future</a>
-            </div>
-        </nav>
-        <main>
-            <section id="about">
-                <h1>About</h1>
-                <p>
-                    Tired of using modern languages and frameworks for your web
-                    development projects?
-                </p>
-                <p>
-                    Yearning for a fresh perspective that taps into the roots of
-                    programming history?
-                </p>
-                <p>
-                    Introducing [name] where old-school meets cutting-edge to
-                    revolutionize your web development experience. This isn't
-                    just a trip down memory lane, it's an opportunity to combine
-                    the wisdom of the past with the possibilities of the present
-                    to craft the development experience of the future.
-                </p>
-            </section>
-            <section id="solution">
-                <h1>Solution</h1>
-                <p>This programming language is inspired by BASIC.</p>
-                <p>We used [...] to build it.</p>
-                <p>
-                    It is a very low level language that is compiled to HTML
-                    code which is then used to render a web page.
-                </p>
-            </section>
-            <section id="features">
-                <h1>Features</h1>
-                <p>Displaying different heading and paragraph tags.</p>
-                <p>Having variables that can be used/updated by the user.</p>
-            </section>
-            <section id="future">
-                <h1>Future</h1>
-                <p>Images</p>
-                <p>Routing</p>
-            </section>
-        </main>
-    </body>
+        <p>Output:</p>
+        <div style="border: solid 1px blue; padding: 1rem">
+          <h1>Hello World!</h1>
+        </div>
+      </section>
+      <section id="future">
+        <h1>Future</h1>
+        <p>Images</p>
+        <p>Routing</p>
+      </section>
+    </main>
+  </body>
 </html>
