Add a list of some features

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,8 +66,30 @@
       </section>
       <section id="features">
         <h1>Features</h1>
-        <p>Displaying different heading and paragraph tags.</p>
-        <p>Having variables that can be used/updated by the user.</p>
+        <ul>
+          <li>
+            Rendering HTML tags with <code>OPEN</code> and <code>CLOSE</code>
+          </li>
+          <li>
+            Unstructured control flow with <code>GOTO</code> and
+            <code>GOTOIF</code>
+          </li>
+          <li>Variable assignment and reassignment</li>
+          <li>Event listeners using <code>GOTO</code></li>
+          <li>
+            Binding attributes such as <code>input value</code> to variables
+            using
+            <code>BIND</code>
+          </li>
+          <li>
+            Adding attributes such as <code>style</code> to tags using
+            <code>ATTRIBUTE</code>
+          </li>
+          <li>Strings and printing text and values with <code>PRINT</code></li>
+          <li>Numbers and basic arithmetic operators like <code>+</code></li>
+          <li>Booleans expressions such as <code>=</code> for equality</li>
+          <li>Arrays (heterogenous, so can contain different types)</li>
+        </ul>
       </section>
       <section>
         <h1>Demos</h1>
@@ -83,6 +105,10 @@ END</code></pre>
         <div style="border: solid 1px blue; padding: 1rem">
           <h1>Hello World!</h1>
         </div>
+      </section>
+      <section>
+        <h1>Technical Details</h1>
+        TODO
       </section>
       <section id="future">
         <h1>Future</h1>
