--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,26 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="globals.css" media="screen" />
     <title>Document</title>
   </head>
-  <body>
-    <div class="topper">
-      <div class="one">NAME</div>
-      <div class="two">WEB</div>
-      <div class="three"></div>
-    </div>
-    <nav>
+  <body
+    style="
+      background-color: white;
+      max-width: 75%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+    "
+  >
+    <header
+      style="
+        display: flex;
+        justify-content: center;
+        background-color: dimgray;
+        border: 4px solid black;
+      "
+    >
+      <div
+        style="padding: 1rem; background-color: white; display: inline-block"
+      >
+        <h1>BASIC</h1>
+      </div>
+      <div
+        style="padding: 1rem; background-color: black; display: inline-block"
+      >
+        <h1 style="color: white">Web</h1>
+      </div>
+    </header>
+    <!-- <nav>
       <div class="container">
         <a href="#">About</a>
         <a href="#solution">Solution</a>
         <a href="#features">Features</a>
         <a href="#future">Future</a>
       </div>
-    </nav>
+    </nav> -->
     <main>
       <section id="about">
-        <h1>About</h1>
+        <div style="padding: 1rem 0">
+          <h1
+            style="
+              margin: 0;
+              display: inline-block;
+              padding: 1rem;
+              background-color: yellow;
+              box-shadow: 0.5rem 0.5rem black;
+            "
+          >
+            About
+          </h1>
+        </div>
         <p>
           Tired of using modern languages and frameworks for your web
           development projects?
@@ -41,7 +75,19 @@
         <p>By the way, ___say that this page is written in BASIC Web___</p>
       </section>
       <section id="solution">
-        <h1>Solution</h1>
+        <div style="padding: 1rem 0">
+          <h1
+            style="
+              margin: 0;
+              display: inline-block;
+              padding: 1rem;
+              background-color: yellow;
+              box-shadow: 0.5rem 0.5rem black;
+            "
+          >
+            Solution
+          </h1>
+        </div>
         <p>
           BASIC Web is a programming language inspired by variants of BASIC. It
           allows you to construct DOM nodes, handle events, and bind data,
@@ -65,7 +111,19 @@
         </p>
       </section>
       <section id="features">
-        <h1>Features</h1>
+        <div style="padding: 1rem 0">
+          <h1
+            style="
+              margin: 0;
+              display: inline-block;
+              padding: 1rem;
+              background-color: yellow;
+              box-shadow: 0.5rem 0.5rem black;
+            "
+          >
+            Features
+          </h1>
+        </div>
         <ul>
           <li>
             Rendering HTML tags with <code>OPEN</code> and <code>CLOSE</code>
@@ -92,29 +150,78 @@
         </ul>
       </section>
       <section>
-        <h1>Demos</h1>
-        <h2>Hello world!</h2>
+        <div style="padding: 1rem 0">
+          <h1
+            style="
+              margin: 0;
+              display: inline-block;
+              padding: 1rem;
+              background-color: yellow;
+              box-shadow: 0.5rem 0.5rem black;
+            "
+          >
+            Demos
+          </h1>
+        </div>
+        <div style="padding: 1rem 0">
+          <h2
+            style="
+              margin: 0;
+              display: inline-block;
+              padding: 1rem;
+              background-color: greenyellow;
+              box-shadow: 0.5rem 0.5rem grey;
+            "
+          >
+            Hello World!
+          </h2>
+        </div>
 
-        <div style="border: solid 1px red; padding: 1rem">
+        <div
+          style="
+            border: solid 1px red;
+            padding: 1rem;
+            box-shadow: 0.5rem 0.5rem tomato;
+            margin: 1rem 0;
+          "
+        >
           <pre style="margin: 0"><code>OPEN h1
 PRINT "Hello World!"
 CLOSE
 END</code></pre>
         </div>
-        <p>Output:</p>
-        <div style="border: solid 1px blue; padding: 1rem">
+        <div
+          style="
+            border: solid 1px blue;
+            padding: 1rem;
+            box-shadow: 0.5rem 0.5rem cornflowerblue;
+            margin: 1rem 0;
+          "
+        >
           <h1>Hello World!</h1>
         </div>
       </section>
       <section>
-        <h1>Technical Details</h1>
-        TODO
+        <div style="padding: 1rem 0">
+          <h1
+            style="
+              margin: 0;
+              display: inline-block;
+              padding: 1rem;
+              background-color: yellow;
+              box-shadow: 0.5rem 0.5rem black;
+            "
+          >
+            Technical Details
+          </h1>
+        </div>
+        <p>TODO</p>
       </section>
-      <section id="future">
+      <!-- <section id="future">
         <h1>Future</h1>
         <p>Images</p>
         <p>Routing</p>
-      </section>
+      </section> -->
     </main>
   </body>
 </html>
