slightly more details

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,9 +105,9 @@
         </p>
         <p>
           The compiler and runtime library are written in TypeScript. When you
-          compile your code, you get an HTML file. Your program is encoded to an
-          intermediate representation in JSON which the runtime library uses to
-          run your program in the browser.
+          compile your code, you get an HTML file with embedded JavaScript. Your
+          program is encoded to an intermediate representation in JSON which the
+          runtime library uses to run your program in the browser.
         </p>
       </section>
       <section id="features">
